...
  software_engineer_1: {
    label: 'Software Engineer 1',
    description: 'Learning the fundamentals',
    index: 1,
  },
  software_engineer_2: {
    label: 'Software Engineer 2',
    description: 'Independent contributor',
    index: 2,
  },
  senior_engineer: {
    label: 'Senior Software Engineer',
    description: 'Technical leadership',
...
